--- a/index.html
+++ b/index.html
@@ -19,7 +19,36 @@
         </section>
     </section>
     <main>
-
+        <div class="column1">
+            <h3>Our Team </h3>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+            sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+            magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+            quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+            ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
+            dolor in hendrerit in vulputate velit esse molestie consequat,
+            vel illum dolore eu feugiat nulla facilisis at vero eros et
+            accumsan</p>
+            <section class="box">
+            </section>
+        </div>
+        <div class="column2"></div>
+            <h3>Our Mission</h3>
+            <p> imperdiet doming id quod mazim placerat facer possim
+            assum. Typi non habent claritatem insitam; est usus legentis
+            in iis qui facit eorum claritatem. Investigationes
+            demonstraverunt lectores legere me lius quod ii legunt saepius.
+            Claritas est etiam processus dynamicus, qui sequitur mutationem
+           </p>
+           <p> Typi non habent claritatem insitam; est usus legentis
+           in iis qui facit eorum claritatem. Investigationes
+           demonstraverunt lectores legere me lius quod ii legunt saepius.
+           Claritas est etiam processus dynamicus, qui sequitur mutationem
+           consuetudium lectorum. Mirum est notare quam littera gothica,
+           quam nunc putamus parum claram, anteposuerit litterarum formas
+           humanitatis per seacula quarta decima et quinta decima. Eodem
+           modo typi, qui nunc nobis videntur parum clari, fiant sollemnes
+           in futurum.</p>
     </main>
 </body>
 
